apps/core/harbor/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`harbor.@@SKIP_BASE_DOMAIN@@`) && PathPrefix(`/api/`)
      kind: Rule
      priority: 100
      services:
        - name: harbor-core
          port: 80
    - match: Host(`harbor.@@SKIP_BASE_DOMAIN@@`) && PathPrefix(`/service/`)
      kind: Rule
      priority: 100
      services:
        - name: harbor-core
          port: 80
    - match: Host(`harbor.@@SKIP_BASE_DOMAIN@@`) && PathPrefix(`/v2/`)
      kind: Rule
      priority: 100
      services:
        - name: harbor-core
          port: 80
    - match: Host(`harbor.@@SKIP_BASE_DOMAIN@@`) && PathPrefix(`/c/`)
      kind: Rule
      priority: 100
      services:
        - name: harbor-core
          port: 80
    - match: Host(`harbor.@@SKIP_BASE_DOMAIN@@`)
      kind: Rule
      priority: 10
      services:
        - name: harbor-portal
          port: 80
  tls: {}
